# Base

./: .gitignore  CMakeLists.txt  Dockerfile
.devcontainer/: Dockerfile  devcontainer.json  run-container.sh
App/: App.cpp  CMakeLists.txt
Core/: CMakeLists.txt  Core.cpp  Core.h
